--- a/components/App/app.scss
+++ b/components/App/app.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: 50px;
 
   .app-component__container {
     display: flex;
